# sqlancer

./: .classpath  .factorypath  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  checkstyle.xml  clean.sh  clean_spark.sh  codecov.yml  database0.lck  database10.lck  database11.lck  database12.lck  database13.lck  database14.lck  database15.lck  database16.lck  database17.lck  database18.lck  database19.lck  database2.lck  database20.lck  database21.lck  database22.lck  database23.lck  database24.lck  database25.lck  database26.lck  database27.lck  database28.lck  database29.lck  database3.lck  database30.lck  database31.lck  database32.lck  database33.lck  (+43 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md  workflows~HEAD_0
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: main.yml  maven-central.yml  release.yml  sonarqube.yml  yb_qa.yml
configs/: checkstyle.xml  pmd-rules.xml  spotbugs-exclude.xml
databases/: database0.db  pqsdb0.db  sqlite.db
demo_website/: console.html  console.js  console_style.css  homepage.html  style.css  tutorial.html
dep_graph/: sqlancer-2.0.0.jar.dot  summary.dot
docs/: Citus README.md  DEVELOPMENT.md  PAPERS.md  QueryPlanGuidance.md  testCaseReduction.md
found bug/: lama0 (copy).db  lama0.db
media/logo/: README.md
reducer/: README.md  SimpleReducer.java  TestSimpleReducer.java
scripts/: Dockerfile.mysql
scripts/docker_mysql_runner/: README.md  run_sqlancer_mysql.sh
src/: check_names.py
src/lama/: DatabaseFacade.java  DatabaseProvider.java  Expression.java  IgnoreMeException.java  LikeImplementationHelper.java  Main.java  MainOptions.java  Query.java  QueryAdapter.java  QueryGenerator.java  QueryResultCheckAdapter.java  Randomly.java  SelectStatement.java  StateToReproduce.java  Test.java
src/postgres/: ExecutePostgres.java  (+8 more)
src/sqlancer/datafusion/server/datafusion_server/: Cargo.toml
src/sqlancer/datafusion/server/datafusion_server/src/: main.rs
(+1823 files in other folders)
