[package]
name = "datafusion-server"
edition = "2021"
description = "Standalone DataFusion server"
license = "Apache-2.0"

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
arrow = { version = "52.1.0", features = ["prettyprint"] }
arrow-array = { version = "52.1.0", default-features = false, features = ["chrono-tz"] }
arrow-buffer = { version = "52.1.0", default-features = false }
arrow-flight = { version = "52.1.0", features = ["flight-sql-experimental"] }
arrow-ipc = { version = "52.1.0", default-features = false, features = ["lz4"] }
arrow-ord = { version = "52.1.0", default-features = false }
arrow-schema = { version = "52.1.0", default-features = false }
arrow-string = { version = "52.1.0", default-features = false }
async-trait = "0.1.73"
bytes = "1.4"
chrono = { version = "0.4.34", default-features = false }
dashmap = "5.5.0"
# This version is for SQLancer CI run
datafusion = { version = "40.0.0" }
# Use following line if you want to test against the latest main branch of DataFusion
# datafusion = { git = "https://github.com/apache/datafusion.git", branch = "main" }
env_logger = "0.11"
futures = "0.3"
half = { version = "2.2.1", default-features = false }
hashbrown = { version = "0.14.5", features = ["raw"] }
log = "0.4"
num_cpus = "1.13.0"
object_store = { version = "0.10.1", default-features = false }
parking_lot = "0.12"
parquet = { version = "52.0.0", default-features = false, features = ["arrow", "async", "object_store"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["macros", "rt", "sync"] }
tonic = "0.11"
uuid = "1.0"
prost = { version = "0.12", default-features = false }
prost-derive = { version = "0.12", default-features = false }
mimalloc = { version = "0.1", default-features = false }

[[bin]]
name = "datafusion-server"
path = "src/main.rs"